--- a/iFM/qianduan/css/player2.css
+++ b/iFM/qianduan/css/player2.css
@@ -13,7 +13,7 @@ body, html {
     align-items: center;
     justify-content: center;
     height: 100%;
-    background: url('../img/player-background.jpg') no-repeat center center/cover;
+    background: url('../img/playerbackground.jpg') no-repeat center center/cover;
     position: relative;
 }
 
